--- a/v2/index.html
+++ b/v2/index.html
@@ -341,7 +341,7 @@
 		<div class="container">
 			<div class="row text-center title">
 				<h2>Mes projets [En construction]</h2>
-				<h4 class="light muted">Projets réalisés lors de mon cursus, avec l'association Hazibot ou projets personnels</h4>
+				<h4 class="light muted">Projets réalisés lors de mon cursus, avec l'association Hazybot ou projets personnels</h4>
 			</div>
 			<div class="row services">
 				<div class="col-md-4">
@@ -350,7 +350,7 @@
 							<img src="img/icons/heart-blue.png" alt="" class="icon">
 						</div>
 						<h4 class="heading">Face Key</h4>
-						<p class="description">Gestionnaire de mots de passes par reconnaissance faciale</br>[En cours]</p>
+						<p class="description">Gestionnaire de mots de passe par reconnaissance faciale</br>[En cours]</p>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -390,22 +390,33 @@
 	<section id="lectures" class="section section-padded blue-bg">
 		<div class="container">
 			<div class="title text-center">
-				<h3 class="white">Mes lectures</h3>
-				<h4 class="white light">Mes lectures du moment, archive de mes lecture <a href="#">ici</a></h4>
+				<h3 class="white">Mes lectures du moment</h3>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="owl-twitter owl-carousel">
 						<div class="item text-center">
-							<h4 class="light-white light">"Deepface" Facebook</h4>
+							<h4 class="light-white light">"Deepface" Y.Taigman, M.Yang, M.A.Ranzato, L.Wolf</h4>
+							<img src="img/deepface.jpg" height="250">
+						</div>
+						<div class="item text-center">
+							<h4 class="light-white light">"FaceNet" F.Schroff, D.Kalenichenko, J.Philbin</h4>
+							<img src="img/FaceNet.jpg" height="250">
 						</div>
 						<div class="item text-center">
 							<h4 class="light-white light">"Deeplearning" Ian Goodfellow</h4>
+							<img src="img/deeplearningbook.jpg" height="250">
 						</div>
 						<div class="item text-center">
-							<h4 class="light-white light">"Initiation à la théorie des graphes" Christian Roux</h4>
+							<h4 class="light-white light">"Pattern recognition and machine learning" M.Bishop</h4>
+							<img src="img/bishop.jpg" height="250">
+						</div>
+						<div class="item text-center">
+							<h4 class="light-white light">"Initiation à la théorie des graphes" C.Roux</h4>
+							<img src="img/thgraphe.png" height="250">
 						</div>
 					</div>
+					<center><a href="don/CV_Vilain_FR.pdf" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill" style="margin-top:30px;">Archives</a></center>
 				</div>
 			</div>
 		</div>
@@ -422,13 +433,13 @@
 				<p class="white">Je suis également trésorier de l'association Hazybot, association de robotique de l'UCP.</p>
 				</br>
 				<h3 class="white">Mon CV</h3>
-				<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Français</a>
-				<a href="#" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">English</a>
+				<a href="don/CV_Vilain_FR.pdf" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Français</a>
+				<a href="don/CV_Vilain_EN.pdf" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">English</a>
 				</br></br>
 				<p class="light white">
-					<a href="https://github.com/MattVil" target="_blank" ><i class="fa fa-github">  </i></a>
-					<a href="https://www.linkedin.com/in/matthieu-vilain-a81a4b139/" target="_blank" ><i class="fa fa-linkedin"></i></a>
-					<a href="mailto:mattvilain@gmail.com" target="_blank" ><i class="fa fa-envelope"></i></a>
+					<a href="https://github.com/MattVil" target="_blank" ><i class="space_light fa fa-github" style="font-size:150%">  </i></a>
+					<a href="https://www.linkedin.com/in/matthieu-vilain-a81a4b139/" target="_blank" ><i class="space_light fa fa-linkedin" style="font-size:150%"></i></a>
+					<a href="mailto:mattvilain@gmail.com" target="_blank" ><i class="space_light fa fa-envelope" style="font-size:150%"></i></a>
 				</p>
 			</div>
 		</div>
@@ -455,18 +466,21 @@
 					</div>
 				</div>
 			</div>-->
-			<h3 class="white">Work in progress<span class="open-blink"></span></h3>
+				<center>
+					<h2 class="white">Contact</h1>
+					<a href="https://github.com/MattVil"><i class="space white fa fa-github" style="font-size:300%"></i></a>
+					<a href="https://www.linkedin.com/in/matthieu-vilain-a81a4b139/"><i class="sapce white fa fa-linkedin" style="font-size:300%"></i></a>
+					<a href="mailto:mattvilain@gmail.com"><i class="space white fa fa-envelope" style="font-size:300%"></i></a>
+				</center>
+
+
 			<div class="row bottom-footer text-center-mobile">
 				<div class="col-sm-8">
 					<p>Design original :</p>
 					<p>&copy; 2015 All Rights Reserved. Powered by <a href="http://www.phir.co/">PHIr</a> exclusively for <a href="http://tympanus.net/codrops/">Codrops</a></p>
 				</div>
 				<div class="col-sm-4 text-right text-center-mobile">
-					<ul class="social-footer">
-						<li><a href="http://www.facebook.com/pages/Codrops/159107397912"><i class="fa fa-github"></i></a></li>
-						<li><a href="http://www.twitter.com/codrops"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="https://plus.google.com/101095823814290637419"><i class="fa fa-google-plus"></i></a></li>
-					</ul>
+					<h3 class="white">Work in progress<span class="open-blink"></span></h3>
 				</div>
 			</div>
 		</div>
