quick changes + project page created

--- a/v2/index.html
+++ b/v2/index.html
@@ -350,7 +350,7 @@
 							<img src="img/icons/heart-blue.png" alt="" class="icon">
 						</div>
 						<h4 class="heading">Face Key</h4>
-						<p class="description">Gestionnaire de mots de passe par reconnaissance faciale</br>[En cours]</p>
+						<p class="description">Gestionnaire de mots de passe par reconnaissance faciale </br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -359,7 +359,7 @@
 							<img src="img/icons/guru-blue.png" alt="" class="icon">
 						</div>
 						<h4 class="heading">Urban Life Simulator</h4>
-						<p class="description">Jeu où l'on doit s'occuper de la vie quotidienne des habitants d'une ville pour les maintenir en vie le plus longtemps possible</p>
+						<p class="description">Jeu où l'on doit s'occuper de la vie quotidienne des habitants d'une ville pour les maintenir en vie le plus longtemps possible</br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -368,7 +368,7 @@
 							<img src="img/icons/weight-blue.png" alt="" class="icon">
 						</div>
 						<h4 class="heading">Reconnaissance manuscrite</h4>
-						<p class="description">Programmation from scratch de réseau de neurones (simple/multi perceptron) pour la reconnaissance manuscrite</p>
+						<p class="description">Programmation from scratch de réseau de neurones (simple/multi perceptron) pour la reconnaissance manuscrite</br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
 					</div>
 				</div>
 			</div>
@@ -379,7 +379,7 @@
 							<img src="img/icons/heart-blue.png" alt="" class="icon">
 						</div>
 						<h4 class="heading">Algorithmes d'IA</h4>
-						<p class="description">Q-Learning - <a class="blue" href="#">Détails</a></br>A* - <a class="blue" href="#">Détails</a></p>
+						<p class="description">Q-Learning</br>A*</br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
 					</div>
 				</div>
 			<!--</div>-->
@@ -401,7 +401,7 @@
 						</div>
 						<div class="item text-center">
 							<h4 class="light-white light">"FaceNet" F.Schroff, D.Kalenichenko, J.Philbin</h4>
-							<img src="img/FaceNet.jpg" height="250">
+							<img src="img/facenet.jpg" height="250">
 						</div>
 						<div class="item text-center">
 							<h4 class="light-white light">"Deeplearning" Ian Goodfellow</h4>
@@ -433,8 +433,8 @@
 				<p class="white">Je suis également trésorier de l'association Hazybot, association de robotique de l'UCP.</p>
 				</br>
 				<h3 class="white">Mon CV</h3>
-				<a href="don/CV_Vilain_FR.pdf" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">Français</a>
-				<a href="don/CV_Vilain_EN.pdf" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill">English</a>
+				<a href="don/CV_MVilain_FR.pdf" data-toggle="modal" class="btn btn-white-fill">Français</a>
+				<a href="don/CV_MVilain_EN.pdf" data-toggle="modal" class="btn btn-white-fill">English</a>
 				</br></br>
 				<p class="light white">
 					<a href="https://github.com/MattVil" target="_blank" ><i class="space_light fa fa-github" style="font-size:150%">  </i></a>
@@ -471,6 +471,7 @@
 					<a href="https://github.com/MattVil"><i class="space white fa fa-github" style="font-size:300%"></i></a>
 					<a href="https://www.linkedin.com/in/matthieu-vilain-a81a4b139/"><i class="sapce white fa fa-linkedin" style="font-size:300%"></i></a>
 					<a href="mailto:mattvilain@gmail.com"><i class="space white fa fa-envelope" style="font-size:300%"></i></a>
+					<p>Voir rubrique "About me"</p>
 				</center>
 
 
