add archives page + quick changes

--- a/v2/index.html
+++ b/v2/index.html
@@ -211,7 +211,7 @@
 		<div class="container img-back">
 			<div class="row title text-center">
 				<h2 class="margin-top white">Mes compétences</h2>
-				<h4 class="light white">Je tire mes compétences des cours que j'ai reçu à l'UCP, des cours en ligne mais également de mes projets en groupe et personnel (projet informatique ou non)</h4>
+				<!-- <h4 class="light white">Je tire mes compétences des cours que j'ai reçu à l'UCP, des cours en ligne mais également de mes projets en groupe et personnel (projet informatique ou non)</h4> -->
 				</br></br>
 			</div>
 			<center>
@@ -341,7 +341,7 @@
 		<div class="container">
 			<div class="row text-center title">
 				<h2>Mes projets [En construction]</h2>
-				<h4 class="light muted">Projets réalisés lors de mon cursus, avec l'association Hazybot ou projets personnels</h4>
+				<!-- <h4 class="light muted">Projets réalisés lors de mon cursus, avec l'association Hazybot ou projets personnels</h4> -->
 			</div>
 			<div class="row services">
 				<div class="col-md-4">
@@ -359,7 +359,7 @@
 							<img src="img/icons/guru-blue.png" alt="" class="icon">
 						</div>
 						<h4 class="heading">Urban Life Simulator</h4>
-						<p class="description">Jeu où l'on doit s'occuper de la vie quotidienne des habitants d'une ville pour les maintenir en vie le plus longtemps possible</br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
+						<p class="description">Jeu de simulation de l'évolution d'une population dans une ville</br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
 					</div>
 				</div>
 				<div class="col-md-4">
@@ -368,7 +368,7 @@
 							<img src="img/icons/weight-blue.png" alt="" class="icon">
 						</div>
 						<h4 class="heading">Reconnaissance manuscrite</h4>
-						<p class="description">Programmation from scratch de réseau de neurones (simple/multi perceptron) pour la reconnaissance manuscrite</br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
+						<p class="description">Réseau de neurones from scratch pour la reconnaissance manuscrite</br><a href="./projets/projet1.html" class="blue space_top">En savoir plus</a></p>
 					</div>
 				</div>
 			</div>
@@ -416,7 +416,7 @@
 							<img src="img/thgraphe.png" height="250">
 						</div>
 					</div>
-					<center><a href="don/CV_Vilain_FR.pdf" data-toggle="modal" data-target="#modal1" class="btn btn-white-fill" style="margin-top:30px;">Archives</a></center>
+					<center><a href="archive/archive.html" data-toggle="modal" class="btn btn-white-fill" style="margin-top:30px;">Archives</a></center>
 				</div>
 			</div>
 		</div>
