--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 						</div>
 					</div>
 				</div>
-				<!--<div class="col-md-4">
+				<div class="col-md-4">
 					<div class="intro-table intro-table-hover">
 						<h5 class="white heading hide-hover">1er semestre 2018/2019</h5>
 						<div class="bottom">
@@ -105,7 +105,7 @@
 
 						</div>
 					</div>
-				</div>-->
+				</div>
 				<div class="col-md-4">
 					<div class="intro-table intro-table-third">
 						<h4 class="white heading content">Moocs</h4>
@@ -218,6 +218,7 @@
 			<div class="col-sm-6 text-center-mobile text-align">
 				<!--code-->
 				<p>
+Bienvenue sur mon site !"); |
 
 					<h4 class="white"> <i class="fa fa-code" style="font-size:150%"></i> - Développement :</h4>
 				</p>
