Structure of the new version completed. Just need to fill the sections now

--- a/index.html
+++ b/index.html
@@ -34,25 +34,106 @@
             </div>
             <div class="carousel-section">
                 <div class="carousel-content" id="carousel-content">
-                    <div class="carousel-item active">Détails personnels...</div>
-                    <div class="carousel-item">Compétences...</div>
-                    <div class="carousel-item">Expérience...</div>
-                    <!-- <div class="carousel-item">Formation...</div> -->
+                    <div class="carousel-item active"></div>
+                    <div class="carousel-item"></div>
+                    <div class="carousel-item"></div>
                 </div>
                 <div class="carousel-buttons">
                     <button onclick="showCarouselItem(0)">About me</button>
                     <button onclick="showCarouselItem(1)">Education</button>
                     <button onclick="showCarouselItem(2)">Experience</button>
-                    <!-- <button onclick="showCarouselItem(3)">Skills</button> -->
+                </div>
+            </div>
+        </div>
+        <!-- Assurez-vous que cette flèche est dans la section "personal-info" -->
+        <a href="#projects" class="next-page-arrow">
+            <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 3v18m0 0l-7-7m7 7l7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            </svg>
+        </a>
+    </section>
+
+    <section class="projects" id="projects">
+        <h2>My projets</h2>
+        <div class="project-container">
+            <div class="project-grid">
+                <div class="project-tile" style="--project-color: rgba(100, 149, 237, 0.7);">
+                    <img src="images/project1.png" alt="PerceptU">
+                    <div class="project-title">PerceptU</div>
+                    <div class="project-hover-description">Description du projet 1</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(159, 226, 191, 0.7);">
+                    <img src="images/project1.png" alt="FaceKey">
+                    <div class="project-title">FaceKey</div>
+                    <div class="project-hover-description">Description du projet 2</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(204, 204, 255, 0.7);">
+                    <img src="images/project1.png" alt="HCI2K50">
+                    <div class="project-title">HCI2K50</div>
+                    <div class="project-hover-description">Description du projet 3</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(0, 255, 255, 0.6);">
+                    <img src="images/project1.png" alt="Multi-Camera-Tracking">
+                    <div class="project-title">Multi-Camera Tracking</div>
+                    <div class="project-hover-description">Description du projet 4</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(255, 0, 255, 0.6);">
+                    <img src="images/project1.png" alt="ARIEL">
+                    <div class="project-title">ARIEL</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(205, 92, 92, 0.6);">
+                    <img src="images/project1.png" alt="Social-media-stock">
+                    <div class="project-title">Social media stock</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(255, 127, 80, 0.6);">
+                    <img src="images/project1.png" alt="ENSEACK-2020">
+                    <div class="project-title">ENSEACK 2020</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(64, 224, 208, 0.6);">
+                    <img src="images/project1.png" alt="RushHourMobility-2019">
+                    <div class="project-title">RushHourMobility 2019</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(255, 160, 122, 0.6);">
+                    <img src="images/project1.png" alt="SFHacks-2019">
+                    <div class="project-title">SFHacks 2019</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(255, 0, 0, 0.6);">
+                    <img src="images/project1.png" alt="Spiking-neural-network-fall-detection">
+                    <div class="project-title">Spiking neural network fall detection</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(0, 0, 255, 0.6);">
+                    <img src="images/project1.png" alt="Gated-Network">
+                    <div class="project-title">Gated Network</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(0, 255, 0, 0.6);">
+                    <img src="images/project1.png" alt="UrbanLifeSimulator">
+                    <div class="project-title">Urban Life Simulator</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(128, 128, 0, 0.6);">
+                    <img src="images/project1.png" alt="FootBot">
+                    <div class="project-title">FootBot</div>
+                    <div class="project-hover-description">Description du projet 5</div>
+                </div>
+                <div class="project-tile" style="--project-color: rgba(0, 0, 128, 0.6);">
+                    <img src="images/project1.png" alt="Machine-Learning-Zoo">
+                    <div class="project-title">Machine Learning Zoo</div>
+                    <div class="project-hover-description">Description du projet 5</div>
                 </div>
             </div>
         </div>
     </section>
-
-    <section class="projects" id="projects">
-        <h2>Mes projets</h2>
-        <p>Cette section contiendra la liste de vos projets avec des descriptions et des images.</p>
-    </section>
+    
+    <footer class="page-footer">
+        <p>© 2024 by Matthieu Vilain. Special thanks to chatGPT who is a much better web developer than I am.</p>
+    </footer>
 
     <script src="js/main.js"></script>
 </body>
