--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
 
     <section class="projects" id="projects">
-        <h2>My projets</h2>
+        <h2>My projects</h2>
         <div class="project-container">
             <div class="project-grid">
                 <div class="project-tile" style="--project-color: rgba(100, 149, 237, 0.7);">
