--- a/index.html
+++ b/index.html
@@ -10,130 +10,142 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="hero-section">
-        <img src="images/c0bb27d2-a5e3-4aed-bea5-62b6e7620182.webp" alt="Hero Image" class="hero-image">
-        <div class="hero-overlay">
-            <div class="text-container">
-                <h1 id="animated-text"><span class="cursor">|</span></h1>
+    <div id="page-content">
+        <div class="hero-section">
+            <img src="images/c0bb27d2-a5e3-4aed-bea5-62b6e7620182.webp" alt="Hero Image" class="hero-image">
+            <div class="hero-overlay">
+                <div class="text-container">
+                    <h1 id="animated-text"><span class="cursor">|</span></h1>
+                </div>
             </div>
-        </div>
-        <div class="scroll-arrow">
-            <a href="#personal-info">
-                <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M12 3v18m0 0l-7-7m7 7l7-7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-            </a>
-        </div>
-    </div>
-
-    <section class="personal-info" id="personal-info">
-        <h2>Personal information</h2>
-        <div class="carousel-buttons">
-            <button onclick="showCarouselItem(0)">About me</button>
-            <button onclick="showCarouselItem(1)">Education</button>
-            <button onclick="showCarouselItem(2)">Experience</button>
-        </div>
-        <div class="info-container">
-            <div class="photo-section">
-                <img src="images/photo.jpg" alt="Photo de profil" class="profile-photo">
-                <a href="#projects" class="next-page-arrow">
+            <div class="scroll-arrow">
+                <a href="#personal-info">
                     <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M12 3v18m0 0l-7-7m7 7l7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        <path d="M12 3v18m0 0l-7-7m7 7l7-7" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
                 </a>
             </div>
-            <div class="carousel-section">
-                <div class="carousel-content" id="carousel-content">
-                    <div class="carousel-item active"></div>
-                    <div class="carousel-item"></div>
-                    <div class="carousel-item"></div>
-                </div>
-            </div>
         </div>
-    </section>
 
-    <section class="projects" id="projects">
-        <h2>My projects</h2>
-        <div class="project-container">
-            <div class="project-grid">
-                <div class="project-tile" style="--project-color: rgba(100, 149, 237, 0.7);">
-                    <img src="images/project1.png" alt="PerceptU">
-                    <div class="project-title">PerceptU</div>
-                    <div class="project-hover-description">Description du projet 1</div>
+        <section class="personal-info" id="personal-info">
+            <h2>Personal information</h2>
+            <div class="carousel-buttons">
+                <button onclick="showCarouselItem(0)">About me</button>
+                <button onclick="showCarouselItem(1)">Education</button>
+                <button onclick="showCarouselItem(2)">Experience</button>
+            </div>
+            <div class="info-container">
+                <div class="photo-section">
+                    <img src="images/photo.jpg" alt="Photo de profil" class="profile-photo">
+                    <a href="#projects" class="next-page-arrow">
+                        <svg width="40" height="40" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M12 3v18m0 0l-7-7m7 7l7-7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                        </svg>
+                    </a>
                 </div>
-                <div class="project-tile" style="--project-color: rgba(159, 226, 191, 0.7);">
-                    <img src="images/project1.png" alt="FaceKey">
-                    <div class="project-title">FaceKey</div>
-                    <div class="project-hover-description">Description du projet 2</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(204, 204, 255, 0.7);">
-                    <img src="images/project1.png" alt="HCI2K50">
-                    <div class="project-title">HCI2K50</div>
-                    <div class="project-hover-description">Description du projet 3</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(0, 255, 255, 0.6);">
-                    <img src="images/project1.png" alt="Multi-Camera-Tracking">
-                    <div class="project-title">Multi-Camera Tracking</div>
-                    <div class="project-hover-description">Description du projet 4</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(255, 0, 255, 0.6);">
-                    <img src="images/project1.png" alt="ARIEL">
-                    <div class="project-title">ARIEL</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(205, 92, 92, 0.6);">
-                    <img src="images/project1.png" alt="Social-media-stock">
-                    <div class="project-title">Social media stock</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(255, 127, 80, 0.6);">
-                    <img src="images/project1.png" alt="ENSEACK-2020">
-                    <div class="project-title">ENSEACK 2020</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(64, 224, 208, 0.6);">
-                    <img src="images/project1.png" alt="RushHourMobility-2019">
-                    <div class="project-title">RushHourMobility 2019</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(255, 160, 122, 0.6);">
-                    <img src="images/project1.png" alt="SFHacks-2019">
-                    <div class="project-title">SFHacks 2019</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(255, 0, 0, 0.6);">
-                    <img src="images/project1.png" alt="Spiking-neural-network-fall-detection">
-                    <div class="project-title">Spiking neural network fall detection</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(0, 0, 255, 0.6);">
-                    <img src="images/project1.png" alt="Gated-Network">
-                    <div class="project-title">Gated Network</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(0, 255, 0, 0.6);">
-                    <img src="images/project1.png" alt="UrbanLifeSimulator">
-                    <div class="project-title">Urban Life Simulator</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(128, 128, 0, 0.6);">
-                    <img src="images/project1.png" alt="FootBot">
-                    <div class="project-title">FootBot</div>
-                    <div class="project-hover-description">Description du projet 5</div>
-                </div>
-                <div class="project-tile" style="--project-color: rgba(0, 0, 128, 0.6);">
-                    <img src="images/project1.png" alt="Machine-Learning-Zoo">
-                    <div class="project-title">Machine Learning Zoo</div>
-                    <div class="project-hover-description">Description du projet 5</div>
+                <div class="carousel-section">
+                    <div class="carousel-content" id="carousel-content">
+                        <div class="carousel-item active"></div>
+                        <div class="carousel-item"></div>
+                        <div class="carousel-item"></div>
+                    </div>
                 </div>
             </div>
+        </section>
+
+        <section class="projects" id="projects">
+            <h2>My projects [Details coming soon]</h2>
+            <div class="project-container">
+                <div class="project-grid">
+                    <div class="project-tile" style="--project-color: rgba(100, 149, 237, 0.7);" onclick="openModal('project1')">
+                        <img src="images/project1.png" alt="project1">
+                        <div class="project-title">PerceptU</div>
+                        <div class="project-hover-description">Description du projet 1</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(159, 226, 191, 0.7);" onclick="openModal('project2')">
+                        <img src="images/project1.png" alt="project2">
+                        <div class="project-title">FaceKey</div>
+                        <div class="project-hover-description">Description du projet 2</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(204, 204, 255, 0.7);" onclick="openModal('project3')">
+                        <img src="images/project1.png" alt="project3">
+                        <div class="project-title">HCI2K50</div>
+                        <div class="project-hover-description">Description du projet 3</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(0, 255, 255, 0.6);" onclick="openModal('project4')">
+                        <img src="images/project1.png" alt="project4">
+                        <div class="project-title">Multi-Camera Tracking</div>
+                        <div class="project-hover-description">Description du projet 4</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(255, 0, 255, 0.6);" onclick="openModal('project5')">
+                        <img src="images/project1.png" alt="project5">
+                        <div class="project-title">ARIEL</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(205, 92, 92, 0.6);" onclick="openModal('project6')">
+                        <img src="images/project1.png" alt="project6">
+                        <div class="project-title">Social media stock</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(255, 127, 80, 0.6);" onclick="openModal('project7')">
+                        <img src="images/project1.png" alt="project7">
+                        <div class="project-title">ENSEACK 2020</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(64, 224, 208, 0.6);" onclick="openModal('project8')">
+                        <img src="images/project1.png" alt="project8">
+                        <div class="project-title">RushHourMobility 2019</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(255, 160, 122, 0.6);" onclick="openModal('project9')">
+                        <img src="images/project1.png" alt="project9">
+                        <div class="project-title">SFHacks 2019</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(255, 0, 0, 0.6);" onclick="openModal('project10')">
+                        <img src="images/project1.png" alt="project10">
+                        <div class="project-title">Spiking neural network fall detection</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(0, 0, 255, 0.6);" onclick="openModal('project11')">
+                        <img src="images/project1.png" alt="project11">
+                        <div class="project-title">Gated Network</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(0, 255, 0, 0.6);" onclick="openModal('project12')">
+                        <img src="images/project1.png" alt="project12">
+                        <div class="project-title">Urban Life Simulator</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(128, 128, 0, 0.6);" onclick="openModal('project13')">
+                        <img src="images/project1.png" alt="project13">
+                        <div class="project-title">FootBot</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                    <div class="project-tile" style="--project-color: rgba(0, 0, 128, 0.6);" onclick="openModal('project14')">
+                        <img src="images/project1.png" alt="project14">
+                        <div class="project-title">Machine Learning Zoo</div>
+                        <div class="project-hover-description">Description du projet 5</div>
+                    </div>
+                </div>
+            </div>
+        </section> 
+        
+        <footer class="page-footer">
+            <p>© 2024 by Matthieu Vilain. Special thanks to chatGPT who is a much better web developer than I am.</p>
+        </footer>
+    </div>
+
+    <div id="project-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-button" onclick="closeModal()">&times;</span>
+            <div id="modal-body">
+                <!-- Contenu supplémentaire du projet sera ajouté ici dynamiquement -->
+            </div>
         </div>
-    </section>
-    
-    <footer class="page-footer">
-        <p>© 2024 by Matthieu Vilain. Special thanks to chatGPT who is a much better web developer than I am.</p>
-    </footer>
+    </div>
 
     <script src="js/main.js"></script>
+
 </body>
 </html>
