--- a/index.html
+++ b/index.html
@@ -58,72 +58,72 @@
             <div class="project-container">
                 <div class="project-grid">
                     <div class="project-tile" style="--project-color: rgba(100, 149, 237, 0.7);" onclick="openModal('project1')">
-                        <img src="images/project1.png" alt="project1">
+                        <img src="images/projects/perceptU.png" alt="project1">
                         <div class="project-title">PerceptU</div>
                         <div class="project-hover-description">Description du projet 1</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(159, 226, 191, 0.7);" onclick="openModal('project2')">
-                        <img src="images/project1.png" alt="project2">
+                        <img src="images/projects/facekey/facekey.png" alt="project2">
                         <div class="project-title">FaceKey</div>
                         <div class="project-hover-description">Description du projet 2</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(204, 204, 255, 0.7);" onclick="openModal('project3')">
-                        <img src="images/project1.png" alt="project3">
+                        <img src="images/projects/HCI2K50_1.jpg" alt="project3">
                         <div class="project-title">HCI2K50</div>
                         <div class="project-hover-description">Description du projet 3</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(0, 255, 255, 0.6);" onclick="openModal('project4')">
-                        <img src="images/project1.png" alt="project4">
+                        <img src="images/projects/multiCamTracking.png" alt="project4">
                         <div class="project-title">Multi-Camera Tracking</div>
                         <div class="project-hover-description">Description du projet 4</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(255, 0, 255, 0.6);" onclick="openModal('project5')">
-                        <img src="images/project1.png" alt="project5">
+                        <img src="images/projects/adc2024.png" alt="project5">
                         <div class="project-title">ARIEL</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(205, 92, 92, 0.6);" onclick="openModal('project6')">
-                        <img src="images/project1.png" alt="project6">
+                        <img src="images/projects/socialMediaStock.png" alt="project6">
                         <div class="project-title">Social media stock</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(255, 127, 80, 0.6);" onclick="openModal('project7')">
-                        <img src="images/project1.png" alt="project7">
+                        <img src="images/projects/ensehack.jpg" alt="project7">
                         <div class="project-title">ENSEACK 2020</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(64, 224, 208, 0.6);" onclick="openModal('project8')">
-                        <img src="images/project1.png" alt="project8">
+                        <img src="images/projects/glasses5.jpg" alt="project8">
                         <div class="project-title">RushHourMobility 2019</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(255, 160, 122, 0.6);" onclick="openModal('project9')">
-                        <img src="images/project1.png" alt="project9">
+                        <img src="images/projects/sfhacks.png" alt="project9">
                         <div class="project-title">SFHacks 2019</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(255, 0, 0, 0.6);" onclick="openModal('project10')">
-                        <img src="images/project1.png" alt="project10">
+                        <img src="images/projects/snn/my_arch.png" alt="project10">
                         <div class="project-title">Spiking neural network fall detection</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(0, 0, 255, 0.6);" onclick="openModal('project11')">
-                        <img src="images/project1.png" alt="project11">
+                        <img src="images/projects/ae.png" alt="project11">
                         <div class="project-title">Gated Network</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(0, 255, 0, 0.6);" onclick="openModal('project12')">
-                        <img src="images/project1.png" alt="project12">
+                        <img src="images/projects/rl.png" alt="project12">
                         <div class="project-title">Urban Life Simulator</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(128, 128, 0, 0.6);" onclick="openModal('project13')">
-                        <img src="images/project1.png" alt="project13">
+                        <img src="images/projects/footbot1.jpg" alt="project13">
                         <div class="project-title">FootBot</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(0, 0, 128, 0.6);" onclick="openModal('project14')">
-                        <img src="images/project1.png" alt="project14">
+                        <img src="images/projects/mlZoo.png" alt="project14">
                         <div class="project-title">Machine Learning Zoo</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
