--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="project-tile" style="--project-color: rgba(100, 149, 237, 0.7);" onclick="openModal('project1')">
                         <img src="images/projects/perceptU.png" alt="project1">
                         <div class="project-title">PerceptU</div>
-                        <div class="project-hover-description">Description du projet 1</div>
+                        <div class="project-hover-description"> A Gesture-Controlled Smart TV Interface with Emotional Feedback</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(159, 226, 191, 0.7);" onclick="openModal('project2')">
                         <img src="images/projects/facekey/facekey.png" alt="project2">
