--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <div class="project-tile" style="--project-color: rgba(159, 226, 191, 0.7);" onclick="openModal('project2')">
                         <img src="images/projects/facekey/facekey.png" alt="project2">
                         <div class="project-title">FaceKey</div>
-                        <div class="project-hover-description">Description du projet 2</div>
+                        <div class="project-hover-description">Secure Password Management with Facial Recognition</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(204, 204, 255, 0.7);" onclick="openModal('project3')">
                         <img src="images/projects/HCI2K50_1.jpg" alt="project3">
