--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
                     <div class="project-tile" style="--project-color: rgba(255, 127, 80, 0.6);" onclick="openModal('project7')">
                         <img src="images/projects/ensehack.jpg" alt="project7">
                         <div class="project-title">ENSEACK 2020</div>
-                        <div class="project-hover-description">Description du projet 5</div>
+                        <div class="project-hover-description">A Collaborative Platform and Smart Pin for Urban Pollution Monitoring</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(64, 224, 208, 0.6);" onclick="openModal('project8')">
                         <img src="images/projects/glasses5.jpg" alt="project8">
                         <div class="project-title">RushHourMobility 2019</div>
-                        <div class="project-hover-description">Description du projet 5</div>
+                        <div class="project-hover-description">Smart Glasses for Next-Generation Urban Mobility</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(255, 160, 122, 0.6);" onclick="openModal('project9')">
                         <img src="images/projects/sfhacks.png" alt="project9">
                         <div class="project-title">SFHacks 2019</div>
-                        <div class="project-hover-description">Description du projet 5</div>
+                        <div class="project-hover-description">A Mobile App for Eye Health Analysis Using Machine Learning</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(255, 0, 0, 0.6);" onclick="openModal('project10')">
                         <img src="images/projects/snn/my_arch.png" alt="project10">
