--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <div class="project-tile" style="--project-color: rgba(255, 0, 255, 0.6);" onclick="openModal('project5')">
                         <img src="images/projects/adc2024.png" alt="project5">
                         <div class="project-title">ARIEL</div>
-                        <div class="project-hover-description">Description du projet 5</div>
+                        <div class="project-hover-description">Machine Learning for Exoplanet Atmosphere Characterization</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(205, 92, 92, 0.6);" onclick="openModal('project6')">
                         <img src="images/projects/socialMediaStock.png" alt="project6">
@@ -107,11 +107,11 @@
                         <div class="project-title">Spiking neural network fall detection</div>
                         <div class="project-hover-description">Description du projet 5</div>
                     </div>
-                    <div class="project-tile" style="--project-color: rgba(0, 0, 255, 0.6);" onclick="openModal('project11')">
+                    <!-- <div class="project-tile" style="--project-color: rgba(0, 0, 255, 0.6);" onclick="openModal('project11')">
                         <img src="images/projects/ae.png" alt="project11">
                         <div class="project-title">Gated Network</div>
                         <div class="project-hover-description">Description du projet 5</div>
-                    </div>
+                    </div> -->
                     <div class="project-tile" style="--project-color: rgba(0, 255, 0, 0.6);" onclick="openModal('project12')">
                         <img src="images/projects/rl.png" alt="project12">
                         <div class="project-title">Urban Life Simulator</div>
@@ -125,7 +125,7 @@
                     <div class="project-tile" style="--project-color: rgba(0, 0, 128, 0.6);" onclick="openModal('project14')">
                         <img src="images/projects/mlZoo.png" alt="project14">
                         <div class="project-title">Machine Learning Zoo</div>
-                        <div class="project-hover-description">Description du projet 5</div>
+                        <div class="project-hover-description">Implementing the Fundamentals of Machine Learning</div>
                     </div>
                 </div>
             </div>
