social media stock project description

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="project-tile" style="--project-color: rgba(205, 92, 92, 0.6);" onclick="openModal('project6')">
                         <img src="images/projects/socialMediaStock.png" alt="project6">
                         <div class="project-title">Social media stock</div>
-                        <div class="project-hover-description">Description du projet 5</div>
+                        <div class="project-hover-description">Real-time stock movement prediction using sentiment analysis of online content</div>
                     </div>
                     <div class="project-tile" style="--project-color: rgba(255, 127, 80, 0.6);" onclick="openModal('project7')">
                         <img src="images/projects/ensehack.jpg" alt="project7">
