simple task list

--- a/dailyquest/index.html
+++ b/dailyquest/index.html
@@ -20,7 +20,10 @@
         </h1>
 
         <div id="tasks-panel" class="content-panel active-panel">
-            <div class="placeholder-text">Zone Tâches (Daily)</div>
+            
+            <ul id="taskList" class="task-list">
+                </ul>
+
         </div>
 
         <div id="summary-panel" class="content-panel hidden-panel">
