add progress bar

--- a/dailyquest/index.html
+++ b/dailyquest/index.html
@@ -21,6 +21,14 @@
 
         <div id="tasks-panel" class="content-panel active-panel">
             
+            <div class="progress-container">
+                <span id="progressEmoji" class="progress-emoji">✨</span>
+                <div class="progress-bar-bg">
+                    <div id="progressBarFill" class="progress-bar-fill"></div>
+                </div>
+                
+            </div>
+
             <ul id="taskList" class="task-list">
                 </ul>
 
