--- a/dailyquest/index.html
+++ b/dailyquest/index.html
@@ -8,10 +8,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 <body>
 
     <canvas id="particle-canvas"></canvas>
+
+    <div id="loginOverlay" class="login-overlay">
+        <div class="login-box">
+            <h2>🔐 Security Check</h2>
+            <p>Please enter your access password.</p>
+            <input type="password" id="passwordInput" placeholder="Password" class="form-input-pill">
+            <button id="loginBtn" class="new-quest-btn daily-type-btn" style="width:100%; margin-top:15px;">Unlock App</button>
+            <p id="loginError" style="color: #DB4437; margin-top: 10px; display: none;">Wrong password!</p>
+        </div>
+    </div>
 
     <main class="hero-section">
         <h1 class="hero-title">
