--- a/dailyquest/index.html
+++ b/dailyquest/index.html
@@ -121,6 +121,10 @@
 
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
+    
+    <script src="daily.js"></script>
+    <script src="yearly.js"></script>
+    
     <script src="script.js"></script>
 </body>
 </html>
