start achivements panel

--- a/dailyquest/index.html
+++ b/dailyquest/index.html
@@ -50,6 +50,54 @@
 
         <div id="summary-panel" class="content-panel hidden-panel">
             <div class="placeholder-text">Yearly Summary Area</div>
+            <!-- DOWN ARROW: Go to Achievements -->
+            <div id="nav-arrow-down" class="nav-arrow down" title="Go to Achievements">↓</div>
+        </div>
+
+        <div id="achievements-panel" class="content-panel hidden-panel">
+            <!-- UP ARROW: Go back to Yearly (Outside the tile) -->
+            <div id="nav-arrow-up" class="nav-arrow up" title="Back to Calendar">
+                <span class="chevron"></span>
+            </div>
+
+            <div class="glass-panel">
+                <div class="achievements-grid">
+                    <!-- TILE 1: Large (Trend) -->
+                    <div class="stat-tile tile-large">
+                        <h3>Weekly Trend</h3>
+                        <div class="tile-content-placeholder">📈</div>
+                    </div>
+
+                    <!-- TILE 2: Small (Streak) -->
+                    <div class="stat-tile">
+                        <h3>Streak</h3>
+                        <div class="tile-content-placeholder">🔥</div>
+                    </div>
+
+                    <!-- TILE 3: Small (Total) -->
+                    <div class="stat-tile">
+                        <h3>Total</h3>
+                        <div class="tile-content-placeholder">🏆</div>
+                    </div>
+
+                    <!-- TILE 4: Tall (Habits) -->
+                    <div class="stat-tile tile-tall">
+                        <h3>Hall of Fame</h3>
+                        <div class="tile-content-placeholder">🏅</div>
+                    </div>
+
+                    <!-- TILE 5: Wide (Upcoming) -->
+                    <div class="stat-tile tile-wide">
+                        <h3>Win Rate</h3>
+                        <div class="tile-content-placeholder">📊</div>
+                    </div>
+                    <!-- TILE 6: Standard -->
+                    <div class="stat-tile">
+                        <h3>Best</h3>
+                        <div class="tile-content-placeholder">💎</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
