--- a/dailyquest/index.html
+++ b/dailyquest/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
 </head>
 
@@ -228,15 +228,15 @@
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
 
-    <script src="daily.js"></script>
-    <script src="yearly.js"></script>
-    <script src="achievements.js"></script>
+    <!-- MODULES -->
+    <script src="js/auth.js"></script>
+    <script src="js/daily.js"></script>
+    <script src="js/yearly.js"></script>
+    <script src="js/achievements.js"></script>
+    <script src="js/particles.js"></script>
 
-    <!-- NEW MODULES -->
-    <script src="particles.js"></script>
-    <script src="auth.js"></script>
-
-    <script src="script.js"></script>
+    <!-- MAIN CONTROL -->
+    <script src="js/script.js"></script>
 </body>
 
 </html>
